--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "rimraf ./build && tsc",
-    "example": "npm run build && node build/index.js"
+    "example": "npm run build && node build/example/index.js"
   },
   "keywords": [],
   "author": "",
@@ -14,12 +14,14 @@
   "devDependencies": {
     "@types/express": "^4.17.17",
     "@types/node": "^18.15.3",
+    "@types/ws": "^8.5.4",
     "nodemon": "^2.0.21",
     "rimraf": "^4.4.0",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.2"
   },
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "ws": "^8.13.0"
   }
 }
