--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,9 @@
     /* Type Checking */
     "strict": false,                                      /* Enable all strict type-checking options. */
     "noImplicitAny": false,                               /* Enable error reporting for expressions and declarations with an implied 'any' type. */
-    "skipLibCheck": true                                 /* Skip type checking all .d.ts files. */
-  }
+    "skipLibCheck": true                                /* Skip type checking all .d.ts files. */
+  },
+  "exclude": [
+    "web-ide/**/*"
+  ]
 }
